src/objects/review_item_meta__mdt.object
<CustomObject>
    <description>Works with the default technology assets.</description>
    <fields>
        <fullName>Category_Description__c</fullName>
        <label>Category Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Item_Assets__c</fullName>
        <label>Item Assets</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Item_Description__c</fullName>
        <label>Item Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rvw_type__c</fullName>
        <label>Review Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>review_Category__c</fullName>
        <label>Review Category</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Review Item</label>
    <pluralLabel>Review Items</pluralLabel>
</CustomObject>